<resources>
    <string name="app_name">LabTools</string>
    <string name="title_community">커뮤니티</string>
    <string name="title_notification">알림</string>
    <string name="title_home">LabTools</string>
    <string name="title_tools">도구</string>
    <string name="title_memo">메모</string>
    <string name="title_profile">프로필</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="kakao_app_key">fa80791b0b8cfd763b4894481f6e8638</string>
    <string name="notification">알림</string>
    <string name="shared_last_login_platform">last_login</string>
    <string name="msg_token_fmt" translatable="false">토큰 : %s</string>
    <string name="notice">공지:</string>
    <string name="memory_clear">MC</string>
    <string name="memory_recall">MR</string>
    <string name="memory_add">M+</string>
    <string name="memory_subtract">M-</string>
    <string name="memory_store">MS</string>
    <string name="percentage">%</string>
    <string name="root">√</string>
    <string name="square">x²</string>
    <string name="fraction">⅟x</string>
    <string name="ce">CE</string>
    <string name="c">C</string>
    <string name="backspace">⌫</string>
    <string name="division">÷</string>
    <string name="plus_minus">±</string>
    <string name="comma">,</string>
    <string name="equal">＝</string>
    <string name="addition">+</string>
    <string name="subtraction">−</string>
    <string name="multiplication">×</string>
    <string name="value_9">9</string>
    <string name="value_8">8</string>
    <string name="value_7">7</string>
    <string name="value_6">6</string>
    <string name="value_5">5</string>
    <string name="value_4">4</string>
    <string name="value_3">3</string>
    <string name="value_2">2</string>
    <string name="value_1">1</string>
    <string name="value_0">0</string>
    <string name="menu_item_history">History</string>
    <string name="history">History: </string>
    <string name="clear_history">Clear history</string>
    <string name="history_result">"History result: "</string>
    <string name="no_history">"There's no history yet."</string>
    <string name="history_cleared">History cleared</string>
    <string name="memory_cleared_toast">Memory cleared</string>
    <string name="memory_recalled_toast">Memory recalled</string>
    <string name="memory_added_toast">"Memory added: "</string>
    <string name="memory_subtracted_toast">"Memory subtracted: "</string>
    <string name="memory_stored_toast">"Memory stored: "</string>
    <string name="main_login_text_kor">로그인</string>
    <string name="main_password_text_kor">패스워드</string>
    <string name="main_sign_text_kor">회원가입</string>
    <string name="main_findlogin_text_kor">아이디 찾기 / 비밀번호찾기</string>
    <string name="register_kor">회원가입</string>
    <string name="login_kor">로그인</string>
    <string name="logout_kor">로그아웃</string>
    <string name="share_kor">앱 공유</string>
    <string name="favorite_kor">내 즐겨찾기</string>
    <string name="myprotocol_kor">나의 프로토콜</string>
    <string name="license_kor">라이선스</string>
    <string name="about_kor">about</string>
    <string name="input_kor">입력</string>
    <string name="sol_kor">해설)</string>
    <string name="main_fragment_make_text_kor">Create buffer calculator\n %, molarity calculator\n</string>
    <string name="main_fragment_dil_text_kor">Dilution calculator\n with stock solution \n</string>
    <string name="main_fragment_mw_text_kor">Molecular weight\n Molecular weight calculator\n</string>
    <string name="main_fragment_cell_text_kor">Cell culture calculator\n counter / seed number / dish area\n</string>
    <string name="main_fragment_buffer_text_kor">My protocols\n Individual protocol, method, capture\n</string>
    <string name="main_fragment_unit_converter_text_kor">Unit Converter\nConcentration,Temp,pressure etc.\n</string>
    <string name="main_fragment_protein_text_kor">Protain \n SDS-page Dye, etc </string>
    <string name="main_fragment_dnarna_text_kor">RNA / RNA \n PCR, Purity electrophoresis\n</string>
    <string name="main_fragment_pcr_text_kor">Real time PCR \nFold change\ 계산기 \n (ΔΔCt method) </string>
    <string name="main_fragment_sds_text_kor">SDS-PAGE\nGel 계산기\n</string>
    <string name="main_fragment_qa_text_kor">실험 \nQ &amp; A 게시판\n</string>
    <string name="gel_fragment_stacking_title_kor">Stacking gel (5% 고정)</string>
    <string name="gel_fragment_stacking_concentration_kor">만들고자 하는 농도</string>
    <string name="gel_fragment_stacking_makevolume_kor">만들고자 하는 용량</string>
    <string name="gel_fragment_stacking_fur_kor">조성</string>
    <string name="gel_fragment_stacking_volume_kor">용량(mL)</string>
    <string name="gel_fragment_resolving_title_kor">Resolving gel Gel  (6~15% )</string>
    <string name="gel_fragment_resolving_concentration_kor">만들고자 하는 농도(%)</string>
    <string name="gel_fragment_resolving_makevolume_kor">만들고자 하는 용량(mL)</string>
    <string name="gel_fragment_resolving_fur_kor">조성</string>
    <string name="gel_fragment_resolving_volume_kor">용량(mL)</string>
    <string name="make_fragment_1stbtn_text_kor">몰농도(M) 용액제조\n Calculate mass of ingredient</string>
    <string name="make_fragment_2ndbtn_text_kor">%농도 용액제조\n Calculate mass of ingredient</string>
    <string name="make_fragment_3rdbtn_text_kor">%농도 용액이용 몰농도(M) 용액제조\n Preparation % soln. from M soln.</string>
    <string name="make_fragment_4thbtn_text_kor">몰농도 (M)용액이용 %농도 용액제조\n Preparation M soln. from % soln.</string>
    <string name="make_fragment_1stbtn_text_eng"> Mass molarity solution\n Calculate mass of ingredient</string>
    <string name="make_fragment_2ndbtn_text_eng"> % (w/v) solution\n Calculate mass of ingredient</string>
    <string name="make_fragment_3rdbtn_text_eng"> Molarity from % solution \n Preparation % soln. from M soln.</string>
    <string name="make_fragment_4thbtn_text_eng"> % soln. from M soln. \n Preparation M soln. from % soln.</string>
    <string name="make_1stbtn_title_kor">몰농도(M) 용액 제조하기</string>
    <string name="make_1stbtn_weight_kor">시약의 분자량</string>
    <string name="make_1stbtn_concen_kor">원하는 몰농도</string>
    <string name="make_1stbtn_volume_kor">원하는 볼륨</string>
    <string name="make_1stbtn_alldel_kor">모두삭제</string>
    <string name="make_1stbtn_cal_kor">계산하기</string>
    <string name="make_1stbtn_amount_kor">필요한 시약 량</string>
    <string name="make_1stbtn_sol_D_kor"> 의 시약을 증류수를 이용하여 최종 볼륨이</string>
    <string name="make_1stbtn_sol_C_kor"> 가 되도록 녹이면</string>
    <string name="make_1stbtn_sol_B_kor"> 용액이 제조된다.</string>
    <string name="make_2ndbtn_title_kor">%(w/v)농도 용액 제조하기</string>
    <string name="make_2ndbtn_concen_kor">원하는 농도</string>
    <string name="make_2ndbtn_volume_kor">원하는 볼륨</string>
    <string name="make_2ndbtn_alldel_kor">모두삭제</string>
    <string name="make_2ndbtn_cal_kor">계산하기</string>
    <string name="make_2ndbtn_amount_kor">필요한 시약 량</string>
    <string name="make_2ndbtn_sol_D_kor"> 의 시약을 증류수를 이용하여 최종 볼륨이</string>
    <string name="make_2ndbtn_sol_C_kor"> 가 되도록 녹이면</string>
    <string name="make_2ndbtn_sol_B_kor"> 용액이 제조된다.</string>
    <string name="make_3rdbtn_title_kor">% 농도 용액으로 몰농도 (M) 용액 제조</string>
    <string name="make_3rdbtn_concen_kor">시료 분자량(M/V)</string>
    <string name="make_3rdbtn_volume_kor">원하는 몰농도</string>
    <string name="make_3rdbtn_weight_kor">원하는 볼륨</string>
    <string name="make_3rdbtn_solution_concen_kor">용액의 % 농도</string>
    <string name="make_3rdbtn_solution_density_kor">용액의 밀도</string>
    <string name="make_3rdbtn_alldel_kor">모두삭제</string>
    <string name="make_3rdbtn_cal_kor">계산하기</string>
    <string name="make_3rdbtn_amount_kor">% 농도로 된 용액을 몰농도 (M)로 환산할 수 있습니다.
</string>
    <string name="make_3rdbtn_sol_D_kor"> M 용액 </string>
    <string name="make_3rdbtn_sol_F_kor"> mL과 증류수 </string>
    <string name="make_3rdbtn_sol_B_kor"> mL을 혼합하면 </string>
    <string name="make_3rdbtn_sol_A_kor"> M농도 용액을 제조할수 있다.</string>
    <string name="make_4thbtn_title_kor">몰농도 (M)용액으로 %농도 용액 제조하기</string>
    <string name="make_4thbtn_weight_kor">시료 분자량 (MW)</string>
    <string name="make_4thbtn_concen_kor">제조할 용액 % 농도</string>
    <string name="make_4thbtn_volume_kor">제조할 볼륨</string>
    <string name="make_4thbtn_solution_concen_kor">용액의 몰농도(M)</string>
    <string name="make_4thbtn_solution_density_kor">용액의 밀도</string>
    <string name="make_4thbtn_alldel_kor">모두삭제</string>
    <string name="make_4thbtn_cal_kor">계산하기</string>
    <string name="make_4thbtn_amount_kor">% 농도로 된 용액을 몰농도 (M)로 환산할 수 있습니다.</string>
    <string name="make_4thbtn_sol_D_kor"> M 용액 </string>
    <string name="make_4thbtn_sol_F_kor"> mL과 증류수 </string>
    <string name="make_4thbtn_sol_B_kor"> mL을 혼합하면 </string>
    <string name="make_4thbtn_sol_A_kor"> % 용액 </string>
    <string name="make_4thbtn_sol_B1_kor"> L을 제조할수 있다.</string>
    <string name="concentration_1stbtn_title_kor">%농도 용액을 몰농도(M) 으로 환산</string>
    <string name="concentration_1stbtn_weight_kor">용액의 % 농도</string>
    <string name="concentration_1stbtn_concen_kor">시료의 분자량(MW)</string>
    <string name="concentration_1stbtn_density_kor">용액의 밀도</string>
    <string name="concentration_1stbtn_alldel_kor">모두삭제</string>
    <string name="concentration_1stbtn_cal_kor">계산하기</string>
    <string name="concentration_1stbtn_amount_kor">% 농도로 된 용액을 몰농도 (M)로 환산할 수 있습니다</string>
    <string name="concentration_1stbtn_sol_D_kor"> 용액은 몰농도로 환산하면 </string>
    <string name="concentration_1stbtn_sol_C_kor"> 농도의 용액입니다. </string>
    <string name="concentration_2ndbtn_title_kor">몰농도 (M)농도 용액으로 % 용액 환산</string>
    <string name="concentration_2ndbtn_weight_kor">용액의 몰농도</string>
    <string name="concentration_2ndbtn_concen_kor">시료의 분자량</string>
    <string name="concentration_2ndbtn_density_kor">용액의 밀도</string>
    <string name="concentration_2ndbtn_alldel_kor">모두삭제</string>
    <string name="concentration_2ndbtn_cal_kor">계산하기</string>
    <string name="concentration_2ndbtn_amount_kor"> </string>
    <string name="concentration_2ndbtn_sol_D_kor"> 용액은 % 농도로 환산 시에</string>
    <string name="concentration_2ndbtn_sol_C_kor"> 용액입니다. </string>
    <string name="concentration_3rdbtn_title_kor"> % 농도를 ppm 농도로 환산 </string>
    <string name="concentration_3rdbtn_density_kor">용액의 % 농도</string>
    <string name="concentration_3rdbtn_alldel_kor">모두삭제</string>
    <string name="concentration_3rdbtn_cal_kor">계산하기</string>
    <string name="concentration_3rdbtn_sol_S_kor"> 위 </string>
    <string name="concentration_3rdbtn_sol_A_kor"> 용액은 </string>
    <string name="concentration_3rdbtn_sol_B_kor"> 용액입니다. </string>
    <string name="concentration_4thbtn_title_kor"> 몰농도 (M) 를 ppm 농도로 환산 </string>
    <string name="concentration_fragment_1stbtn_text_kor">%농도를 몰농도(M) 으로 변환</string>
    <string name="concentration_fragment_2ndbtn_text_kor">몰농도(M)를 %농도로 변환</string>
    <string name="concentration_fragment_3rdbtn_text_kor">%농도를 ppm농도로 변환</string>
    <string name="concentration_fragment_4thbtn_text_kor">몰농도(M)를 ppm농도로 변환</string>
    <string name="concentration_fragment_5thbtn_text_kor">몰농도(M)를 노르말 농도(N)로 변환</string>
    <string name="dnarna_fragment_1stbtn_text_kor">O.D and purity\n OD value and purity</string>
    <string name="dnarna_fragment_2ndbtn_text_kor">Gel %  and loading dyes \n Agarose gel conc. %</string>
    <string name="dnarna_fragment_3rdbtn_text_kor">Real-time PCR (ΔΔCt ) \n Calculate fold change</string>
    <string name="dnarna_fragment_4thbtn_text_kor">Dilution stock solution \n Calculate 1 x solution</string>
    <string name="dnarna_fragment_5thbtn_text_kor">Probe information \n Fluorophore probe</string>
    <string name="dnarna_fragment_6thbtn_text_kor">Tm Calculator \n Calculator Tm, GC %</string>
    <string name="desc_post_item_iv_image">post_item_iv_image</string>
    <string name="default_nickname">작성자</string>
    <string name="default_time">2021–01–01</string>
    <string name="post_save">등록</string>
    <string name="nested"><![CDATA[<<]]></string>
</resources>