<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_calculator">

    <fragment
        android:id="@+id/navigation_community"
        android:name="com.ishnn.labtools.ui.community.CommunityFragment"
        android:label="@string/title_community"
        tools:layout="@layout/fragment_community">
        <action
            android:id="@+id/action_nav_commu_to_notification"
            app:destination="@id/navigation_notification" />
    </fragment>

    <fragment
        android:id="@+id/navigation_notification"
        android:name="com.ishnn.labtools.ui.community.notification.NotificationFragment"
        android:label="@string/title_notification"
        tools:layout="@layout/fragment_notification" />

    <fragment
        android:id="@+id/navigation_calculator"
        android:name="com.ishnn.labtools.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">
    </fragment>

    <fragment
        android:id="@+id/navigation_stopwatch"
        android:name="com.ishnn.labtools.ui.tools.ToolsFragment"
        android:label="@string/title_tools"
        tools:layout="@layout/fragment_tools_stopwatch" />

<!--    <fragment-->
<!--        android:id="@+id/navigation_notification"-->
<!--        android:name="com.ishnn.labtools.ui.community.notification.NotificationFragment"-->
<!--        android:label="@string/title_notification"-->
<!--        tools:layout="@layout/fragment_tools_stopwatch" />-->

    <fragment
        android:id="@+id/navigation_memo"
        android:name="com.ishnn.labtools.ui.memo.MemoFragment"
        android:label="@string/title_memo"
        tools:layout="@layout/fragment_community">
    </fragment>

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.ishnn.labtools.ui.home.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>