<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/item_post_comment_tv_nickname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_nickname"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/item_post_comment_layout_content"
        app:layout_constraintStart_toStartOf="parent" />
    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/item_post_comment_bt_image"
        android:layout_marginStart="@dimen/large_margin"
        android:src="@drawable/ic_posting_image"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:background="@color/transparent"
        app:layout_constraintStart_toEndOf="@+id/item_post_comment_tv_nickname"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/item_post_comment_layout_content"/>


    <Button
        android:id="@+id/item_post_comment_bt_save"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:background="@color/transparent"
        android:text="@string/post_save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.2dp"
        android:layout_centerInParent="true"
        android:background="@color/colorGray"
        app:layout_constraintTop_toTopOf="@+id/item_post_comment_layout_content" />

    <LinearLayout
        android:id="@+id/item_post_comment_layout_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/item_post_comment_bt_save">

        <ImageView
            android:id="@+id/item_post_comment_image"
            android:layout_width="360dp"
            android:layout_height="360dp"
            android:scaleType="fitCenter"
            android:padding="@dimen/large_margin"
            android:visibility="gone"
            android:contentDescription="@string/desc_post_item_iv_image"/>

        <TextView
            android:id="@+id/item_post_comment_text_nested"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nested"
            android:visibility="gone"
            android:textStyle="bold"
            />

        <EditText
            android:id="@+id/item_post_comment_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/large_margin"
            android:background="@null"
            android:ellipsize="end"
            android:gravity="center_vertical"
            android:hint="내용을 입력하세요."
            android:textColor="@color/colorBlack"
            android:textSize="14sp"
            android:textStyle="bold" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.2dp"
        android:layout_centerInParent="true"
        android:background="@color/colorGray"
        app:layout_constraintBottom_toBottomOf="@+id/item_post_comment_layout_content" />
</androidx.constraintlayout.widget.ConstraintLayout>