<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".FunctionFragment.DnarnaFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:id="@+id/dnarna_1st"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="2dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="200dp"
                android:layout_height="58dp"
                android:layout_weight="1"
                android:background="@color/colorMwAtomBtn"
                android:src="@drawable/s_10_1"/>

            <TextView
                android:id="@+id/dnarna_1st_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/colorMwAtomBtn"
                android:textColor="@color/white"
                android:gravity="center"
                android:text="@string/dnarna_fragment_1stbtn_text_kor" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/dnarna_2nd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="2dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="200dp"
                android:layout_height="58dp"
                android:layout_weight="1"
                android:background="@color/colorMwAtomBtn"
                android:src="@drawable/s_10_2"/>

            <TextView
                android:id="@+id/dnarna_2nd_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/colorMwAtomBtn"
                android:textColor="@color/white"
                android:gravity="center"
                android:text="@string/dnarna_fragment_2ndbtn_text_kor" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/dnarna_3rd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="2dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="200dp"
                android:layout_height="58dp"
                android:layout_weight="1"
                android:background="@color/colorMwAtomBtn"
                android:src="@drawable/s_10_3"/>

            <TextView
                android:id="@+id/dnarna_3rd_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/colorMwAtomBtn"
                android:textColor="@color/white"
                android:gravity="center"
                android:text="@string/dnarna_fragment_3rdbtn_text_kor" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/dnarna_4th"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="2dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="200dp"
                android:layout_height="58dp"
                android:layout_weight="1"
                android:background="@color/colorMwAtomBtn"
                android:src="@drawable/s_10_4"/>

            <TextView
                android:id="@+id/dnarna_4th_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/colorMwAtomBtn"
                android:textColor="@color/white"
                android:gravity="center"
                android:text="@string/dnarna_fragment_4thbtn_text_kor" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/dnarna_5th"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="2dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="200dp"
                android:layout_height="58dp"
                android:layout_weight="1"
                android:background="@color/colorMwAtomBtn"
                android:src="@drawable/s_10_5"/>

            <TextView
                android:id="@+id/dnarna_5th_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/colorMwAtomBtn"
                android:textColor="@color/white"
                android:gravity="center"
                android:text="@string/dnarna_fragment_5thbtn_text_kor" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/dnarna_6th"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="2dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="200dp"
                android:layout_height="58dp"
                android:layout_weight="1"
                android:background="@color/colorMwAtomBtn"
                android:src="@drawable/s_10_6"/>

            <TextView
                android:id="@+id/dnarna_6th_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/colorMwAtomBtn"
                android:textColor="@color/white"
                android:gravity="center"
                android:text="@string/dnarna_fragment_6thbtn_text_kor" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>
